# python-package-demo

./: .gitignore  MANIFEST.in  README.md  code.py  main.py  pyproject.toml  reports.md  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: challenge01.yml  main.yml
src/demopack/: __init__.py  functions.py
src/demopack/resources/raws/: content.text
src/ingineerpackage/: customtypes.py  executor.py  functions.py
src/ingineerpackage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: _context.py  context.py  test_defualt.py  test_initials.py
