

[build-system] 
requires = ["pdm-backend"] 
build-backend = "pdm.backend"

[project]
name = "demopack"
version = "1.0.0"
authors = [{ name = "kvruntime", email = "kvruntime@gmail.com" }]
description = "Description is here"

readme = "README.md"

requires-python = ">=3.9"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

license = { file = "LICENCE" }


dependencies = ["requests", "typer"]


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
ingineer-script = "ingineerpackage.functions:running_script"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

# [tool.setuptools.package-data]
# resources = ["*"]

[tool.pdm.version]
source = "scm"

[tool.pytest.ini_options]
md_report = true
md_report_verbose = 0
md_report_color = "auto"